# AgenticMD

./: .gitignore  README.md  backend.md  frontend.md  interaction.md
fast-backend/: README.md  hello.py  prd.md  pyproject.toml  task_status_update.md
fast-backend/2-tasks/: 01_chat_process_api.md  02_log_interaction_tool.md  03_edit_interaction_tool.md  04_custom_tools.md  05_interaction_state_api.md  06_interaction_stream_ws.md
fast-backend/app/: main.py
fast-backend/app/api/: deps.py
fast-backend/app/api/v1/: api.py
fast-backend/app/api/v1/endpoints/: auth.py  chat.py  interaction.py  tools.py
fast-backend/app/core/: config.py  security.py
fast-backend/app/crud/: conversation.py  token.py  user.py
fast-backend/app/graph/: builder.py  llm.py  state.py
fast-backend/app/models/: __init__.py  conversation.py  token.py  user.py
fast-backend/app/schemas/: token.py  user.py
fast-backend/app/tools/: custom_tools.py  edit_interaction.py  log_interaction.py
fast-backend/docs/: api.md  auth_api.md  chat_api.md  interaction_api.md  stream_api.md  tools_api.md
fast-backend/tasks/: 01_setup.md  02_core_state.md  03_core_langgraph.md  04_tools_log.md  05_tools_edit.md  06_tools_custom.md  07_ai_logic.md  08_sync_api.md
frontend/: package-lock.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/auth/login/: page.js
frontend/app/auth/signup/: page.js
frontend/app/components/: ChatPanel.jsx  InteractionForm.jsx  Sidebar.jsx
frontend/app/contexts/: AuthContext.js
frontend/app/hooks/: useAuth.js  useChat.js
frontend/app/lib/: api.js
