[project]
name = "fast-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.128.8",
    "langchain>=0.3.28",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.11",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.39.0",
]
